--- a/Content page/style.css
+++ b/Content page/style.css
@@ -293,4 +293,39 @@ section {
       -ms-flex-align: center;
           align-items: center;
 }
+
+@media screen and (max-width: 1200px) {
+  section {
+    width: 90%;
+    margin-left: auto;
+    margin-top: 80px;
+  }
+  .container {
+    -ms-grid-columns: (250px)[1];
+        grid-template-columns: repeat(1, 250px);
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+  }
+  .filters {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 0px;
+    height: 200px;
+  }
+  .filters .filters-xd {
+    width: 100%;
+    height: 100%;
+  }
+  header a {
+    margin-left: 30%;
+  }
+}
 /*# sourceMappingURL=style.css.map */
