--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -202,3 +202,32 @@ section {
     }
   }
 }
+
+@media screen and (max-width:1200px) {
+  section{
+    width: 90%;
+    margin-left: auto;
+    margin-top: 80px;
+  }
+  .container{
+    grid-template-columns: repeat(1, 250px);
+    grid-template-rows: auto;
+  }
+  .filters{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0px;
+    height: 200px;
+    .filters-xd{
+      width: 100%;
+      height: 100%;
+    }
+  }
+  header{
+    a{
+      margin-left: 30%;
+    }
+  }
+}
