--- a/style.scss
+++ b/style.scss
@@ -78,14 +78,7 @@ a{
   padding: 2rem 4rem;
   text-decoration: none;
 }
-/*.edificios{
-  width: 500px;
-  z-index: 100;
-  position: absolute;
-  margin-top: 15%;
-  margin-left: 60%;
-  border-radius: 30px;
-}*/
+
 .ciudades{
   border-radius: 30px;
   margin-left: 3%;
@@ -114,4 +107,57 @@ img{
     width: 500px;
     border-radius: 30px;
   }
+}
+@media screen and (max-width: 1200px){
+.edificios{
+  margin-top: 95%;
+  width: 50%;
+  margin-left: 30%;
+  img{
+    width: 100%;
+  }
+  h2{
+    font-size: 15px;
+  }
+}
+button{
+  margin-top:120%;
+  padding: 0.5rem;
+  margin-left: 38%;
+}
+a{
+  font-size: 20px;
+  padding: 30px;
+}
+.portada{
+  h1{
+    z-index: 1000;
+    font-size: 50px;
+    margin-left: 0;
+    margin-right: 30%;
+  }
+  .arepa{
+    margin-left:-50%;
+    width: 200%;
+    height: 600px;
+    object-fit: cover;
+  }
+}
+body,html{
+  overflow: hidden;
+}
+header{
+  width: 100%;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  h1{
+    margin-left: 0px;
+    font-size: 20px;
+  }
+  .logo{
+    width: 35%;
+    margin-left: auto;
+  }
+}
 }
