--- a/style.scss
+++ b/style.scss
@@ -156,8 +156,8 @@ header{
     font-size: 20px;
   }
   .logo{
-    width: 35%;
-    margin-left: auto;
+    width: 30%;
+    margin-left: 40%;
   }
 }
 }
