--- a/style.css
+++ b/style.css
@@ -191,8 +191,8 @@ a {
     font-size: 20px;
   }
   header .logo {
-    width: 35%;
-    margin-left: auto;
+    width: 30%;
+    margin-left: 40%;
   }
 }
 /*# sourceMappingURL=style.css.map */
