--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -205,8 +205,8 @@ section {
 
 @media screen and (max-width:1200px) {
   section{
-    width: 97%;
-    margin-left: auto;
+    width: 100%;
+    margin-left: 50px;
     margin-top: 80px;
   }
   .container{
