--- a/Content page/style.css
+++ b/Content page/style.css
@@ -296,8 +296,8 @@ section {
 
 @media screen and (max-width: 1200px) {
   section {
-    width: 97%;
-    margin-left: auto;
+    width: 100%;
+    margin-left: 50px;
     margin-top: 80px;
   }
   .container {
