--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -207,6 +207,7 @@ section {
   section{
     width: 100%;
     margin-top: 80px;
+    margin-left: 10%;
   }
   .container{
     grid-template-columns: repeat(1, 380px);
