--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -207,7 +207,7 @@ section {
   section{
     width: 95%;
     margin-top: 80px;
-    margin-left: auto;
+    margin-right: auto;
   }
   .container{
     grid-template-columns: repeat(1, 380px);
