--- a/Content page/style.css
+++ b/Content page/style.css
@@ -298,7 +298,7 @@ section {
   section {
     width: 95%;
     margin-top: 80px;
-    margin-right: 100px;
+    margin-right: 200px;
   }
   .container {
     -ms-grid-columns: (380px)[1];
@@ -325,7 +325,7 @@ section {
     height: 100%;
   }
   header a {
-    color: black;
+    color: white;
     margin-left: 30%;
   }
 }
