--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -207,7 +207,7 @@ section {
   section{
     width: 95%;
     margin-top: 80px;
-    margin-right: 100px;
+    margin-right: 200px;
   }
   .container{
     grid-template-columns: repeat(1, 380px);
@@ -227,7 +227,7 @@ section {
   }
   header{
     a{
-      color:black;
+      color:white;
       margin-left: 30%;
     }
   }
