--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -205,9 +205,9 @@ section {
 
 @media screen and (max-width:1200px) {
   section{
-    width: 95%;
+    width: 90%;
     margin-top: 80px;
-    margin-right: 200px;
+    margin-right: auto;
   }
   .container{
     grid-template-columns: repeat(1, 380px);
