--- a/Content page/style.css
+++ b/Content page/style.css
@@ -296,9 +296,10 @@ section {
 
 @media screen and (max-width: 1200px) {
   section {
+    margin-left: 0%;
     width: 90%;
     margin-top: 80px;
-    margin-right: auto;
+    margin-right: 10%;
   }
   .container {
     -ms-grid-columns: (380px)[1];
