--- a/Content page/style.scss
+++ b/Content page/style.scss
@@ -205,9 +205,10 @@ section {
 
 @media screen and (max-width:1200px) {
   section{
+    margin-left: 0%;
     width: 90%;
     margin-top: 80px;
-    margin-right: auto;
+    margin-right: 10%;
   }
   .container{
     grid-template-columns: repeat(1, 380px);
