--- a/Content page/style.css
+++ b/Content page/style.css
@@ -305,6 +305,7 @@ section {
         grid-template-columns: repeat(1, 380px);
     -ms-grid-rows: auto;
         grid-template-rows: auto;
+    grid-gap: 20px;
   }
   .filters {
     width: 100%;
